[package]
name = "bgjk"
version = "1.0.0"
authors = ["Bourgond Aries <macocio@gmail.com>"]
license = "GPL-3.0"
keywords = ["3D", "collision", "detection"]
repository = "https://github.com/BourgondAries/bgjk"
description = """
Boolean Gilbert-Johnson-Keerthi algorithm for determining if convex hull volumes intersect.
"""

[dependencies]
clippy = { version = "0.0", optional = true }

[features]
default = []
dev = ["clippy"]
