[package]
name = "bgjk"
version = "1.0.1"
authors = ["Kevin Robert Stravers <kevin@stravers.net>"]
license = "GPL-3.0"
keywords = ["3D", "collision", "detection"]
repository = "https://github.com/kstrafe/bgjk"
description = """
Boolean Gilbert-Johnson-Keerthi algorithm for determining if convex hull volumes intersect.
"""

[dependencies]
clippy = { version = "0.0", optional = true }

[features]
default = []
dev = ["clippy"]
